[findbugs] Use Integer.valueOf() instead of constructor
See FindBugs rule DM_NUMBER_CTOR for details.

Change-Id: I211713edf3269a126688df6698e6fcb3ff3bf497
Signed-off-by: Pierre-Charles David <pierre-charles.david@obeo.fr>